--- a/packages/task-app/app/dashboard/tasks/components/style.css
+++ b/packages/task-app/app/dashboard/tasks/components/style.css
@@ -109,6 +109,7 @@ html {
 .accordion-visible {
   display: flex;
   flex-direction: column;
+  
 }
 
 .accordion-hide {
@@ -123,4 +124,10 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: start;
+}
+
+.step-settings {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
