--- a/packages/task-app/app/dashboard/tasks/components/style.css
+++ b/packages/task-app/app/dashboard/tasks/components/style.css
@@ -136,3 +136,78 @@ html {
   text-transform: capitalize;
   color: #5f5f5f;
 }
+
+.requeriment-contaienr > .accordion-container > .accordion-visible {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.tt-divider {
+  width: 100%;
+  display: block;
+  height: 3px;
+  padding: 0;
+  background-color: #75757554;
+  border-bottom: 2px solid #efefef;
+}
+
+.tt-l-col-m {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+
+.step-displayer {
+  height: 5vh;
+}
+
+.step-ul {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.step-ul > li {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+}
+
+.li-active::before {
+  color: white !important;
+  background-color: #17354E !important;
+}
+
+.li-active::after {
+  background-color: #17354E !important;
+}
+
+.step-ul>li::after {
+  background-color: rgb(231, 231, 231);
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  margin: auto;
+  top: 40%;
+  z-index: 0;
+}
+
+.step-ul > li > svg {
+  height: 48px;
+  width: 48px;
+  padding: 12px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+}
+
+.li-active > svg {
+  background-color: #17354E !important;
+  fill: white;
+}
