--- a/packages/task-app/components/common/inputComponent.css
+++ b/packages/task-app/components/common/inputComponent.css
@@ -107,3 +107,37 @@ html {
   user-select: none !important;
   text-wrap: nowrap;
 }
+
+.tt_textarea {
+  border: 1px solid var(--tt-gray-300);
+  border-radius: 12px;
+  padding: 12px;
+  box-shadow: var(--tt-shadow-m);
+  width: 100%;
+  transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.tt_textarea:focus {
+ outline: none; 
+ border: 1px solid var(--tt-color-active);
+ color: var(--tt-color-active);
+}
+
+.tt_input-select {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.tt_input-selec > ul {
+  margin-top: 8vh !important;
+}
+
+#textarea_legend {
+  transition: all 1s ease-in-out;
+}
+
+.tt_textarea-container:has(.tt_textarea:focus) > #textarea_legend {
+  color: #3182ce;
+}
