--- a/packages/task-app/app/style/global.scss
+++ b/packages/task-app/app/style/global.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .tt-box {
-  background: whitesmoke;
+  background: #FFFFFF;
   box-shadow: 0px 1px 4px #00000085;
   border-radius: $rad-m;
   padding: 1rem;
@@ -44,7 +44,7 @@ body {
 .tt-grid-column {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-column-gap: 20px;
+  grid-column-gap: 1rem;
 }
 
 .tt-flex-col {
@@ -57,3 +57,6 @@ body {
   flex-direction: row;
 }
 
+.g-1 {
+  gap: 1rem;
+}
