--- a/packages/task-app/app/dashboard/tasks/components/style.css
+++ b/packages/task-app/app/dashboard/tasks/components/style.css
@@ -100,6 +100,10 @@ html {
   opacity: .7;
 }
 
+.accordion-header > svg {
+  height: 1rem;
+}
+
 .accordion-desactive {
   cursor: pointer;
   transform: rotate(180deg);
