--- a/packages/task-app/components/common/inputComponent.css
+++ b/packages/task-app/components/common/inputComponent.css
@@ -1,12 +1,12 @@
 html {
   --tt-gray-300:#E0E0E0;
   --tt-gray-50:#FAFAFA;
-  --tt-shadow-m: 2px 3px 14px #e7e7e7;
+  --tt-shadow-s: -1px 1px 3px 2px rgb(0 0 0 / 14%);
   --tt-shadow-l: 2px 2px 14px #b5b5b5;
+  --tt-shadow-m: 2px 2px 14px #b5b5b57d;
   --tt-radius-m: 8px;
   --tt-color-active: #3182ce;
 }
-
 
 .tt_input-field-float {
   width: 100%;
@@ -26,7 +26,7 @@ html {
 }
 
 .tt_input {
-  height: 3vh;
+  height: 2vh;
   width: 100%;
   font-size: 1rem;
   padding-left: 12px;
