feat: add task settings

--- a/packages/task-app/app/style/global.scss
+++ b/packages/task-app/app/style/global.scss
@@ -80,6 +80,10 @@ body {
   gap: 1rem;
 }
 
+.p-s {
+  padding: .3rem !important;
+}
+
 .gray-6 {
   background-color: $gray-600;
 }
@@ -90,4 +94,15 @@ body {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.background {
+  left: 0%;
+  top: 0%;
+  position: absolute;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  z-index: 1;
 }
