--- a/packages/task-app/components/ui/inputSearch/inputSearch.css
+++ b/packages/task-app/components/ui/inputSearch/inputSearch.css
@@ -1,11 +1,13 @@
 
 .selector-container {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   gap: auto;
+  z-index: 300
 }
 
 .selector-container > svg {
