--- a/packages/task-app/app/style/global.scss
+++ b/packages/task-app/app/style/global.scss
@@ -25,7 +25,12 @@ button {
 
 body {
   background-color: #f3f3f3 !important;
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
+}
+
+.over-auto {
+  overflow: auto;
 }
 
 .tt-box {
