--- a/packages/task-app/app/style/global.scss
+++ b/packages/task-app/app/style/global.scss
@@ -14,6 +14,10 @@ h3 {
   font-size: 1rem;
 }
 
+p {
+  margin: 0;
+}
+
 fieldset {
   border: none;
 }
@@ -24,6 +28,7 @@ button {
 }
 
 body {
+  margin: 0;
   background-color: #f3f3f3 !important;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
@@ -36,7 +41,11 @@ body {
 .tt-box {
   background: #FFFFFF;
   border-radius: $rad-m;
-  padding: 1rem;
+  padding: .8rem;
+}
+
+.txt-gray-6 {
+  color: rgb(0 0 0 / 50%);
 }
 
 .container-full {
@@ -81,8 +90,39 @@ body {
   flex-direction: row;
 }
 
+.tt-btn-primary {
+  $lightDark: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  padding: 8px;
+  border: 1px solid $lightDark;
+  border-radius: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.8);
+  transition: all .2s ease-in;
+}
+
+.tt-btn-primary:hover {
+  box-shadow: inset 800px 0px 0px 0px rgba(0, 0, 0, 0.8);
+  color: white;
+}
+
+.text-deco {
+  padding-bottom: 0.4rem;
+  border-bottom: 1px solid white;
+  box-shadow: inset 0px -1px 0px 0px #e9e9e9;
+}
+
+.g-xl {
+  gap: 1.2rem !important;
+}
+
 .g-1 {
   gap: 1rem;
+}
+
+.g-m {
+  gap: .6rem !important;
 }
 
 .p-s {
