--- a/packages/task-app/app/style/global.scss
+++ b/packages/task-app/app/style/global.scss
@@ -65,6 +65,18 @@ ul {
   font-weight: 600;
 }
 
+.txt-s {
+  font-size: .6rem;
+}
+
+.txt-m {
+  font-size: .8rem;
+}
+
+.txt-l {
+  font-size: 1rem;
+}
+
 .unselectable {
   user-select: none;
 }
