--- a/packages/task-app/components/common/inputComponent.scss
+++ b/packages/task-app/components/common/inputComponent.scss
@@ -64,6 +64,7 @@ html {
 
 .tt_input-field {
   display: flex;
+  width: 100%;
   flex-direction: row;
   transition: all 0.5s;
   background-color: white;
